# secp256k1

./: Cargo.toml  README.md
impl/dart/: pubspec.yaml
impl/dart/android/app/: build.gradle
impl/dart/android/app/src/main/kotlin/org/icrc/flutter/dart/: MainActivity.kt
impl/dart/ios/Runner.xcodeproj/: project.pbxproj
impl/dart/lib/: cryptohelper.dart  main.dart
impl/dart/linux/: CMakeLists.txt
impl/dart/macos/Runner.xcodeproj/: project.pbxproj
impl/dart/macos/Runner/Configs/: AppInfo.xcconfig
impl/dart/windows/runner/: Runner.rc
src/: auth.rs  main.rs
