[package]
name = "secp256k1-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
actix-web = "4.4.1"
actix-rt = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = { version = "0.10", default-features = false }
actix-cors ="0.7.0"
openssl = "0.10.32"
